deployments/example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example
  name: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - image: example
        name: example
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example
  name: example
spec:
  ports:
  - name: tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: example
  type: ClusterIP
---
